2004-01-20  Jim Evins  <evins@snaught.com>

	Catching up on a couple of backlogged user template submissions.

	* data/avery-iso-templates.xml:
		Added "DECAdry OLW-4731" and "DECAdry DLW-1731" aliases for Avery 7160.
		Suggested by Linas Jakucionis.
	
	* data/zweckform-iso-templates.xml:
		Added Zweckform 4760, submitted by Thomas Vill.

	* AUTHORS:
		Updated to reflect above submissions.

2004-01-06  Jim Evins  <evins@snaught.com>

	Split-out template.[ch], paper.[ch], xml-template.[ch], xml-paper.[ch], and
	xml.[ch] into a separate library called libglabels, to facilitate third
	party use of glabels template files.  This was suggested by Wayne Schuller.
	Once split-out, some modifications to the structures and functions to
	make a cleaner more useful API, hopefully.  Rather extensive changes have
	propogated to other modules.

	* src/paper.h:
	* src/paper.c:
	* src/template.h:
	* src/template.c:
	* src/xml-paper.h:
	* src/xml-paper.c:
	* src/xml-template.h:
	* src/xml-template.c:
	* src/xml.h:
	* src/xml.c:
		These files have been moved to libglabels/.  API cleanup performed.

	* libglabels/libglabels.h:
	* libglabels/libglabels-private.h:
	* libglabels/Makefile.am:
		These files have been added to finish out libglabels.
	
	* Makefile.am:
	* configure.in:
	* glabels.spec.in:
	* po/POTFILES.in:
	* src/Makefile.am:
		Modified to reflect new sets of files in src/ and libglabels/.

	* COPYING.LIBGLABELS:
	* COPYING-DOCS:
		Added copy of the LGPL for libglabels, and a copy the GFDL for
		documentation.
	
	* src/glabels-batch.c:
	* src/glabels.c:
	* src/label.c: (gl_label_finalize), (gl_label_set_template),
	(gl_label_get_size):
	* src/label.h:
	* src/prefs-model.c: (gl_prefs_model_load_settings):
	* src/print-dialog.c:
	* src/print.c: (gl_print_simple), (gl_print_merge_collated),
	(gl_print_merge_uncollated), (gl_print_batch), (print_info_free),
	(print_crop_marks), (print_label), (draw_outline),
	(clip_to_outline), (clip_punchouts):