@@ -126,5 +126,6 @@ particular products (I apologize if I have missed anybody):
 	Ian Peake
 	Wayne Schuller
 	Thomas Vill
+	Fred Bacon
 
 And many others for their many helpful suggestions and bug reports -- thanks.
